log
Thu 25 Apr 2024 02:22:49 PM UTC: 
 tests:  0|6
total_score: 0/70
cdcffd0
Thu 25 Apr 2024 02:25:25 PM UTC: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
4b5ba39
Thu 25 Apr 2024 02:28:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b38cd74
Thu 25 Apr 2024 02:33:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ec5f9e5
Thu 25 Apr 2024 02:38:10 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
692d929
Thu 25 Apr 2024 02:38:39 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5e58bbd
Thu 25 Apr 2024 02:39:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:3: error: conversion to non-scalar type requested
   61 |   return (HashMap)map;
      |   ^~~~~~
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d52f6ce
Thu 25 Apr 2024 02:41:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d03c114
Thu 25 Apr 2024 02:42:03 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
64675d3
